# NocionesClave

./: CMakeLists.txt  README.md
1principales_caracteristicas_del_lenguaje_cpp/: CMakeLists.txt
1principales_caracteristicas_del_lenguaje_cpp/src/2_programacion_orientada_a_objetos/: main.cpp
2programacion_orientada_objetos/: CMakeLists.txt
2programacion_orientada_objetos/src/: Estudiante.cpp  Estudiante.h  Persona.cpp  main.cpp
2programacion_orientada_objetos/src/1_principales_caracteristicas_cpp/: main.cpp
3entorno_de_desarrollo_y-archivo_cmakelists/: CMakeLists.txt
3entorno_de_desarrollo_y-archivo_cmakelists/src/: main.cpp
4organizacion_de_un_programa_cpp/: CMakeLists.txt
4organizacion_de_un_programa_cpp_lib_estatica/: CMakeLists.txt
lib/msvc/: NocionesClaveLibDinamica.lib  NocionesClaveLibEstatica.lib
src/: main.cpp
src/2_programacion_orientada_a_objetos/: Persona.h
src/classes/: Estudiante.cpp  Estudiante.h  Persona.cpp  Persona.h
